<resources>
    <string name="app_name">Brain Game</string>
    <string name="app_logo">App Logo</string>
    <string name="addition">Addition</string>
    <string name="subtract">Subtraction</string>
    <string name="calculation">Calculation</string>
    <string name="highest_score">Highest Score</string>
    <string name="_2048">2048</string>
    <string name="go_back">Go back</string>
    <string name="are_you_readyyyy">Are you readyyyy ?</string>
    <string name="start">Start</string>
    <string name="_0">0</string>
    <string name="current_highest_score">Current highest score:</string>
    <string name="your_score">Your score</string>
    <string name="life">Life</string>
    <string name="remaining_time">Remaining time</string>
    <string name="sample_calculation_problem">18 + 3</string>
    <string name="submit">Submit</string>
    <string name="backspace_button">Backspace button</string>
    <string name="equal_sign">=</string>
    <string name="question_mark">\?</string>
    <string name="minus_sign">-</string>
    <string name="celebrating_boy">Celebrating Boy</string>
    <string name="your_score_uppercase">YOUR SCORE</string>
    <string name="congratulation_this_is_a_new_record">Congratulation! This is a new record!</string>
    <string name="are_you_sure_your_highest_score_will_be_saved">Are you sure? Your highest score will be saved</string>
    <string name="exit_game">Exit game?</string>
    <string name="let_s_try_again_current_highest_score_is">Let\'s try again! Current highest score is</string>
    <string name="main_screen">Main Screen</string>
    <string name="play_again">Play Again</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="number_guessing">Number guessing</string>
    <string name="magician">Magician</string>
    <string name="test">TEST</string>
    <string name="_continue">Continue</string>
    <string name="score">Score</string>
    <string name="hello">Hello!</string>
    <string name="number_guessing_game_question_format">I am thinking of a number from 0 to %d, you will become the winner if you can find out what that number is. You have %d chances in total!</string>
    <string name="number_guessing_game_get_user_number_format">You have %d chances left!\nWhat is your number? Remember that it\'s from 0 to %d</string>
    <string name="number_guessing_game_congratulation_format">Exactly! The correct number is %d! You used only %d chances to find out the number! Congratulation!</string>
    <string name="number_guessing_game_guess_result_format">It\'s too %s! Let\'s try again! You have %d chances left! Remember that it\'s from 0 to %d</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="number_guessing_game_over_format">GAME OVER!\nThe correct number is %d!</string>
    <string name="welcome_to_number_guessing_game">Welcome to Number Guessing Game! If you are ready, press the below START button!</string>
    <string name="please_enter_an_integer">Please enter an integer!</string>
    <string name="enter_your_answer">Enter your answer...</string>
</resources>