<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberGuessingGameActivity">

    <ImageButton
        android:id="@+id/number_guessing_game_back_button"
        android:src="@drawable/chevron_left_solid"
        android:background="@android:color/transparent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:scaleType="centerInside"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/go_back" />

    <TextView
        android:id="@+id/number_guessing_game_title"
        android:text="@string/number_guessing"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/number_guessing_game_back_button"
        app:layout_constraintBottom_toBottomOf="@id/number_guessing_game_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/number_guessing_game_current_score_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/number_guessing_game_title">

        <TextView
            android:id="@+id/number_guessing_game_current_score_label"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/number_guessing_game_current_score"
            android:text="@string/_0"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            android:textColor="@color/primary_color_darker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/number_guessing_game_magician"
        android:src="@drawable/magician_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintTop_toBottomOf="@id/number_guessing_game_current_score_layout"
        app:layout_constraintBottom_toTopOf="@id/number_guessing_game_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/magician" />

    <com.basoft.braingame.TypeWriter
        android:id="@+id/number_guessing_game_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:lineSpacingExtra="10dp"
        android:textSize="24sp"
        android:text="@string/hello"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/number_guessing_game_magician"
        app:layout_constraintBottom_toTopOf="@id/number_guessing_game_number_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/number_guessing_game_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:background="@drawable/rounded_yellow_input_box"
        android:text="@string/enter_your_answer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/number_guessing_game_text"
        app:layout_constraintBottom_toTopOf="@id/number_guessing_game_start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/number_guessing_game_start_button"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:background="@drawable/primary_button"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>