<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/math_game_logo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:maxHeight="100dp"
        android:src="@drawable/math_game_logo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/calculation_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:background="@drawable/rounded_rectangle"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/math_game_logo_main"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.175">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rectangle">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/calculation_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/plus_button_background"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.6"
                app:shapeAppearanceOverlay="@style/roundedImageView"/>

            <TextView
                android:id="@+id/calculation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculation"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/calculation_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/calculation_high_score_label"
                android:text="@string/highest_score"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/calculation_title"
                app:layout_constraintBottom_toTopOf="@id/calculation_high_score"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/calculation_high_score"
                android:text="@string/_2048"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/calculation_high_score_label"
                app:layout_constraintBottom_toBottomOf="@id/calculation_title"
                app:layout_constraintEnd_toEndOf="@id/calculation_high_score_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>